--- a/vertical-thermal-review_SI.Rmd
+++ b/vertical-thermal-review_SI.Rmd
@@ -31,10 +31,10 @@ SItable_example = "S1"
 SItable_example_legend <- "Table S1. ...."
 
 #SI figure numbers
-SIfig_example = "S1"
+SIfig_NEON_all = "S1"
 
 #SI figure captions
-SIfig_example_legend <- "Figure S1. ...."
+SIfig_example_legend <- "Figure S1. Vertical gradients in micrometeorological conditions for all forested sites in the National Ecological Observatory Network (NEON)"
 
 ```
 
@@ -75,11 +75,12 @@ For drought scenario, biophysical variables were parameterized similar to normal
 
 METHODS ON LIT REVIEW GO HERE.
 
-\newpage
-
-# Appendix `r appendix_SCBI_treering`. `r appendix_SCBI_treering_title`
 
 \newpage
+
+# `r SIfig_example_legend`
+![**Figure `r SIfig_NEON_all`. Vertical gradients in micrometeorological conditions for all forested sites in the National Ecological Observatory Network (NEON)**. Shown are  height profiles in July mean ± 1 standard deviation for maximum photosyntehtically active ratiation (PAR), maximum wind speed, minimum humidity, maximum $T_{air}$, and maximum biological temperature, $T_{bio}$. Sites are grouped into the following categories: (A) (sub)subtropical and warm temperate broadleaf: ..., (B) temperate open/ savanna forests: ..., (C) temperate mesic broadleaf forests: ..., (D) temperate conifer forests: ..., (E) northern and boreal forests: ...  [Issue #35](https://github.com/EcoClimLab/vertical-thermal-review/issues/35). ](NEON_height_profiles/figures/profile_all_groups.png)
+
 ## References
 
 
